<resources>
    // Navigation Strings
    <string name="app_name">Quokka_App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Users Name Here</string>
    <string name="nav_header_subtitle">User Email Here</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    // Strings For Fragments:
    <string name="menu_home">Home</string>
    <string name="menu_newpatientprofiles">New Patient Profiles</string>
    <string name="menu_userprofile">User Profile</string>
    <string name="menu_patientprofiles">Patient Profiles</string>
    <string name="menu_firstvisit">First Visit</string>
    <string name="menu_patientprofileshome">Patient Profiles Home</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_pastvistprenatal">Prenatal Past Visit</string>
    <string name="menu_pastvistpostpartum">Postpartum Past Visit</string>


    // Strings For Login
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    // Strings For Home
    <string name="home_button_patientprofiles">Patient Profiles</string>
    <string name="home_button_newpatientprofiles">New Patient Profiles</string>

    // Strings For Settings
    <string name="settings_logoutbutton">Logout</string>
    <string name="settings_inquirytext">If you have any inquiries or require technical assistance, please reach out to biodesign@utah.edu.</string>
</resources>