<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.quokka_app.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_newpatientprofiles"
        android:name="com.example.quokka_app.ui.newpatientprofile.NewPatientProfileFragment"
        android:label="@string/menu_newpatientprofiles"
        tools:layout="@layout/fragment_newpatientprofiles"/>

    <fragment
        android:id="@+id/nav_patientprofiles"
        android:name="com.example.quokka_app.ui.patientprofiles.PatientProfilesFragment"
        android:label="@string/menu_patientprofiles"
        tools:layout="@layout/fragment_patientprofiles"/>

    <fragment
        android:id="@+id/nav_userprofile"
        android:name="com.example.quokka_app.ui.userprofile.UserProfileFragment"
        android:label="@string/menu_userprofile"
        tools:layout="@layout/fragment_userprofile" />

    <fragment
        android:id="@+id/nav_patientprofileshome"
        android:name="com.example.quokka_app.ui.patientprofilehome.PatientProfilesHomeFragment"
        android:label="@string/menu_patientprofileshome"
        tools:layout="@layout/fragment_patient_profiles_home">
    </fragment>

    <fragment
        android:id="@+id/nav_firstvisit"
        android:name="com.example.quokka_app.ui.firstvisit.FirstVisitFragment"
        android:label="@string/menu_firstvisit"
        tools:layout="@layout/fragment_first_visit">
    </fragment>

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.quokka_app.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings">

    </fragment>

    <fragment
        android:id="@+id/nav_pastprenatalvisits"
        android:name="com.example.quokka_app.ui.patientprofilehome.PastVisitPrenatalFragment"
        android:label="@string/menu_pastvistprenatal"
        tools:layout="@layout/fragment_past_visit_prenatal">
    </fragment>

    <fragment
        android:id="@+id/nav_pastpostpartumvisits"
        android:name="com.example.quokka_app.ui.patientprofilehome.PastVisitPostpartumFragment"
        android:label="@string/menu_pastvistpostpartum"
        tools:layout="@layout/fragment_past_visit_postpartum">
    </fragment>

    <fragment
        android:id="@+id/nav_pastpostpartumvisitdetailsfragment"
        android:name="com.example.quokka_app.ui.pastvisits.PastPostpartumVisitDetailsFragment"
        tools:layout="@layout/fragment_past_postpartum_visit_details">
    </fragment>

    <fragment
        android:id="@+id/nav_pastprenatalvisitdetailsfragment"
        android:name="com.example.quokka_app.ui.pastvisits.PastPrenatalVisitDetailsFragment"
        tools:layout="@layout/fragment_past_postpartum_visit_details">
    </fragment>

    <action
        android:id="@+id/action_newPatientProfileFragment_to_firstVisitFragment"
        app:destination="@id/nav_firstvisit"
        app:popUpTo="@id/mobile_navigation"
        app:popUpToInclusive="false"/>

    <action
        android:id="@+id/action_patientProfilesFragment_to_patientProfilesHomeFragment"
        app:destination="@id/nav_patientprofileshome" />

    <action
        android:id="@+id/action_firstvisitfragment_to_patientprofilesfragment"
        app:destination="@id/nav_patientprofiles"
        />


    <action
        android:id="@+id/action_HomeFragment_to_patientProfilesHomeFragment"
        app:destination="@+id/nav_patientprofiles"
        />

    <action
        android:id="@+id/action_Home_to_patientprofilesfragment"
        app:destination="@id/nav_patientprofiles"
        />

    <action
        android:id="@+id/action_HomeFragment_to_newpatientprofiles"
        app:destination="@+id/nav_newpatientprofiles"
        />

    <action
        android:id="@+id/global_action_HomeFragment"
        app:destination="@id/nav_home" />

    <action
        android:id="@+id/action_pastvisits_to_prenatalvisitsfragment"
        app:destination="@+id/nav_pastprenatalvisits"/>

    <action
        android:id="@+id/action_pastvisits_to_postpartumvisitsfragment"
        app:destination="@+id/nav_pastpostpartumvisits"/>

    <action
        android:id="@+id/action_pastVisitPostpartumFragment_to_pastPostpartumVisitsDetailsFragment"
        app:destination="@+id/nav_pastpostpartumvisitdetailsfragment"
        />

    <action
        android:id="@+id/action_pastVisitPostpartumFragment_to_pastPrenatalVisitsDetailsFragment"
        app:destination="@+id/nav_pastprenatalvisitdetailsfragment"
        />

</navigation>