<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/baseline_notifications_24"
            android:title="@string/menu_notifications"/>

        <item
            android:id="@+id/nav_newpatientprofiles"
            android:icon="@drawable/baseline_person_add_24"
            android:title="New Patient Profiles"/>

        <item
            android:id="@+id/nav_patientprofiles"
            android:icon="@drawable/baseline_person_24"
            android:title="@string/menu_patientprofiles"/>

        <item
            android:id="@+id/nav_userprofile"
            android:icon="@drawable/baseline_account_circle_24"
            android:title="@string/menu_userprofile"/>

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/baseline_error_24"
            android:title="Settings"/>
    </group>
</menu>